--- a/.editorconfig
+++ b/.editorconfig
@@ -7,9 +7,13 @@ charset = utf-8
 end_of_line = lf
 insert_final_newline = true
 trim_trailing_whitespace = true
-indent_style = tab
+indent_style = space
 indent_size = 4
 
 # JSON specific
 [*.json]
+indent_size = 2
+
+# YAML specific
+[*.yml]
 indent_size = 2
