--- a/packages/main/package.json
+++ b/packages/main/package.json
@@ -2,10 +2,12 @@
   "name": "@electron-workshop/main",
   "version": "1.0.0",
   "private": true,
-	"dependencies": {
-		"@electron-workshop/common": "1.0.0"
-	},
+  "dependencies": {
+    "@electron-workshop/common": "1.0.0",
+    "lodash": "^4.17.21"
+  },
   "devDependencies": {
+    "@types/lodash": "^4.14.197",
     "electron": "25.5.0",
     "typescript": "^5.1.6"
   }
